# StoreKeeper-API

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: .env_test  __init__.py  config.py  db.py
app/api/: __init__.py  categories.py  schemas.py  users.py
app/api/categories/: category.py  crud.py  schemas.py
app/api/orders/: crud.py  order.py  schemas.py  utils.py
app/api/products/: crud.py  product.py  schemas.py
app/api/reports/: report.py  utils.py
app/api/suppliers/: crud.py  schemas.py  (+1 more)
app/core/: __init__.py  config.py  jwt_config.py  logger.py
app/models/: __init__.py  db.py
migrations/versions/: 06bee468905b_update_product_orderitem.py  29d91596ebed_create_supplies_table.py  2a65f31b5e4a_update_user_table2.py  38e65baa2d80_create_suppliers_table.py  3a7febf7f837_create_user_table.py  5d122ad8ed95_update_category_table.py  63011431ce68_create_user_table.py  6c946dd7b060_create_supplies_table.py  9b5d0cf8a008_update_user_table.py  adaf2d0fd2ef_create_product_table.py  bba9a468ab6f_update_product_table.py  cc0f86644eed_create_users_table.py  d0860864af65_create_suppliers_table.py  dc314cc4715f_create_products_table.py  e1b0248a3c3e_create_orders_and_order_items_table.py  edc5326a5253_create_order_table_and_orderitem_table.py  f1d7a25d74d4_update_category_table.py  f336a43c8449_create_categories_table.py  f4f0cc6e5552_category_table.py  ffef4d85fe1c_update_product_table.py
tests/: category_test.py  conftest.py  order_test.py  product_test.py  report_test.py  supplier_test.py  supply_test.py  user_test.py
(+7 files in other folders)
