[tool.poetry]
name = "store-keeper-api"
version = "0.1.0"
description = ""
authors = ["denis <denisergo18@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.7"
flask-swagger = "^0.2.14"
flask-swagger-ui = "^4.11.1"
flask-jwt-extended = "^4.6.0"
pytest = "^8.3.3"
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
